--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
---extra-index-url https://packages.ard.maxar.com/
-max_ard
+max_ard==1.0.0-alpha.0
+git+git:https://github.com/maxar-analytics/max-ard/releases/tag/1.0.0-alpha.0#egg=max_ard
 rasterio
 shapely
 matplotlib
