--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-max_ard==1.0.0-alpha.0
+max_ard
 git+git:https://github.com/maxar-analytics/max-ard/releases/tag/1.0.0-alpha.0#egg=max_ard
 rasterio
 shapely
